[package]
name = "api_tide"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16"
async-std = {version = "1", features = ["attributes"]}
serde = {version = "1.0", features = ["derive"]}
dotenv = "0.15"
mongodb = {version = "1", features = ["async-std-runtime"], default-features = false}