[package]
name = "rust-api-exemplo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16"
async-std = { version = "1", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
mongodb = { version = "1", features = ["async-std-runtime"], default-features = false }
qrcode-generator = {version = "4.1.2", default-features = true}
quircs = "0.10.0"
image = "0.24.0"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }